[gd_scene load_steps=5 format=3 uid="uid://blwx07j4okvds"]

[ext_resource type="PackedScene" uid="uid://cqdhu80i4y0v0" path="res://objects/environment.tscn" id="1_4q7xw"]
[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_5he6f"]
[ext_resource type="PackedScene" uid="uid://vm24d5eiwq0f" path="res://models/lobby.glb" id="2_3ljrd"]
[ext_resource type="PackedScene" uid="uid://cnareske831tl" path="res://objects/menus/main_menu.tscn" id="5_1jlm4"]

[node name="Lobby" type="Node"]
script = ExtResource("1_5he6f")
debug_local_multiplayer = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("5_1jlm4")]

[node name="Environment" parent="." instance=ExtResource("1_4q7xw")]

[node name="Map" parent="." instance=ExtResource("2_3ljrd")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://objects/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]

[editable path="CanvasLayer/MainMenu"]
